--- a/index.html
+++ b/index.html
@@ -2,53 +2,60 @@
 <html lang="en">
 
 <head>
-    <meta charset="utf-8">
-    <title>FDULAN - Faculdade de Direito</title>
+  <meta charset="utf-8">
+  <title>FDULAN - Faculdade de Direito</title>
 
-    <!-- mobile responsive meta valores-->
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+  <!-- mobile responsive meta valores-->
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-    <script src="./assets/js/app.js" async type="module" defer></script>
-    <!--** Plugins Needed for the Project **-->
-    <!-- Bootstrap -->
-    <link rel="stylesheet" href="./assets/plugins/bootstrap/bootstrap.min.css">
-    <!-- slick slider -->
-    <link rel="stylesheet" href="./assets/plugins/slick/slick.css">
-    <!-- themefy-icon -->
-    <link rel="stylesheet" href="./assets/plugins/themify-icons/themify-icons.css">
-    <!-- animation css -->
-    <link rel="stylesheet" href="./assets/plugins/animate/animate.css">
-    <!-- aos -->
-    <link rel="stylesheet" href="./assets/plugins/aos/aos.css">
-    <!-- venobox popup -->
-    <link rel="stylesheet" href="./assets/plugins/venobox/venobox.css">
+  <script src="./assets/js/app.js" async type="module" defer></script>
+  <!--** Plugins Needed for the Project **-->
+  <!-- Bootstrap -->
+  <link rel="stylesheet" href="./assets/plugins/bootstrap/bootstrap.min.css">
+  <!-- slick slider -->
+  <link rel="stylesheet" href="./assets/plugins/slick/slick.css">
+  <!-- themefy-icon -->
+  <link rel="stylesheet" href="./assets/plugins/themify-icons/themify-icons.css">
+  <!-- animation css -->
+  <link rel="stylesheet" href="./assets/plugins/animate/animate.css">
+  <!-- aos -->
+  <link rel="stylesheet" href="./assets/plugins/aos/aos.css">
+  <!-- venobox popup -->
+  <link rel="stylesheet" href="./assets/plugins/venobox/venobox.css">
 
-    <!-- Main Stylesheet -->
-    <link href="./assets/css/style.css" rel="stylesheet">
-    <link href="./assets/css/propio.css" rel="stylesheet">
-    <!--Favicon-->
-    <link rel="shortcut icon" href="./assets/images/favicon.ico" type="image/x-icon">
-    <link rel="icon" href="./assets/images/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/keen-slider@latest/keen-slider.min.css">
-    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+  <!-- Main Stylesheet -->
+  <link href="./assets/css/style.css" rel="stylesheet">
+  <link href="./assets/css/propio.css" rel="stylesheet">
+  <!--Favicon-->
+  <link rel="icon" href="./assets/images/favicon.ico" type="image/x-icon">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/keen-slider@latest/keen-slider.min.css">
+  <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+ <!-- CSS do Leaflet -->
+  <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
+
+  <link href="./assets/css/maps/mapa.css" rel="stylesheet">
+
 </head>
- 
+
 
 <body class="size-1520 primary-color-red background-dark ">
-    <div id="app">
+  <div id="app">
 
-        <p-menu></p-menu>
+    <p-menu></p-menu>
 
-        <router-view></router-view>
-        <p-footer></p-footer>
+    <router-view></router-view>
+    <p-footer></p-footer>
 
-    </div>
- 
-    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/keen-slider@latest/keen-slider.js"></script>
+  </div>
 
-      <!-- jQuery -->
+  <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/keen-slider@latest/keen-slider.js"></script>
+ <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+
+  <!-- jQuery -->
   <script src="./assets/plugins/jQuery/jquery.min.js"></script>
   <!-- Bootstrap JS -->
   <script src="./assets/plugins/bootstrap/bootstrap.min.js"></script>
@@ -64,6 +71,9 @@
   <script
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCcABaamniA6OL5YvYSpB3pFMNrXwXnLwU&libraries=places"></script>
   <script src="./assets/plugins/google-map/gmap.js"></script>
+
+  <!-- JS do Leaflet -->
+  <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
 
   <!-- Main Script -->
   <script src="./assets/js/script.js"></script>
