--- a/index.html
+++ b/index.html
@@ -23,16 +23,18 @@
   <link rel="stylesheet" href="./assets/plugins/aos/aos.css">
   <!-- venobox popup -->
   <link rel="stylesheet" href="./assets/plugins/venobox/venobox.css">
+    
+  <link href="./assets/slider/swiper_slider.css" rel="stylesheet">
+
+
 
   <!-- Main Stylesheet -->
   <link href="./assets/css/style.css" rel="stylesheet">
   <link href="./assets/css/propio.css" rel="stylesheet">
   <!--Favicon-->
   <link rel="icon" href="./assets/images/favicon.ico" type="image/x-icon">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/keen-slider@latest/keen-slider.min.css">
-  <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
  <!-- CSS do Leaflet -->
   <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
 
@@ -50,17 +52,17 @@
     <p-footer></p-footer>
 
   </div>
-
+   <script src="./assets/slider/swiper_slider.js"></script>
+   
   <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/keen-slider@latest/keen-slider.js"></script>
- <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+ 
 
   <!-- jQuery -->
   <script src="./assets/plugins/jQuery/jquery.min.js"></script>
   <!-- Bootstrap JS -->
   <script src="./assets/plugins/bootstrap/bootstrap.min.js"></script>
   <!-- slick slider -->
-  <script src="./assets/plugins/slick/slick.min.js"></script>
+ 
   <!-- aos -->
   <script src="./assets/plugins/aos/aos.js"></script>
   <!-- venobox popup -->
